# sourcesdk-minimal

./: CMakeLists.txt  readme.md
bitmap/: CMakeLists.txt  imageformat.cpp
common/: CMakeLists.txt
game/client/: TeamBitmapImage.h  hud.h  iclientmode.h  iconsole.h  idebugoverlaypanel.h  ifpspanel.h  iloadingdisc.h  imessagechars.h  inetgraphpanel.h  iprofiling.h  itextmessage.h  panelmetaclassmgr.h  vgui_int.h  vguicenterprint.h
game/server/: recipientfilter.h
interfaces/: CMakeLists.txt
mathlib/: CMakeLists.txt
public/: filesystem.h  ienginevgui.h  studio.h
public/SoundEmitterSystem/: isoundemittersystembase.h
public/VGuiMatSurface/: IMatSystemSurface.h
public/bitmap/: imageformat_declarations.h
public/engine/: imatchmaking.h
public/game/client/: iviewport.h
public/inputsystem/: iinputsystem.h
public/mathlib/: ssemath.h  vector.h  vmatrix.h
public/steam/: isteamnetworkingsockets.h  steam_api.json
public/tier0/: basetypes.h  platform.h  threadtools.h
public/tier1/: datamanager.h  memstack.h  strtools.h  utlsymbol.h
public/vgui/: ISurface.h
public/vgui_controls/: BuildGroup.h  Button.h  CheckButton.h  CircularProgressBar.h  Label.h  ListPanel.h  Panel.h  PanelListPanel.h  ProgressBar.h  PropertySheet.h  SectionedListPanel.h  TextEntry.h  TextImage.h  TreeView.h
public/video/: ivideoservices.h
raytrace/: CMakeLists.txt
steam_api/: CMakeLists.txt
tier0/: CMakeLists.txt
tier1/: CMakeLists.txt  newbitbuf.cpp  utlsoacontainer.cpp
tier2/: CMakeLists.txt
tier3/: CMakeLists.txt
utils/common/: CMakeLists.txt
utils/lzma/C/: CMakeLists.txt
vtf/: CMakeLists.txt
